--- a/CSS/base.css
+++ b/CSS/base.css
@@ -1,3 +1,11 @@
-h1, h2, h3 {
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+  background: #ffffff;
+  color: #0f1419;
 }
